add_executable(ade_example ade_example.cpp)
target_include_directories(ade_example PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/tests/include/>)
if(FIND_PROFILER_LIB)
  target_link_libraries(ade_example asyncdeShared profiler)
elseif()
  target_link_libraries(ade_example asyncdeShared)
endif()

add_executable(cde_example cde_example.cpp)
target_include_directories(cde_example PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/tests/include/>)
if(FIND_PROFILER_LIB)
  target_link_libraries(cde_example asyncdeShared profiler)
elseif()
  target_link_libraries(cde_example asyncdeShared)
endif()

add_executable(aderand1_example aderand1_example.cpp)
target_include_directories(aderand1_example PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/tests/include/>)
if(FIND_PROFILER_LIB)
  target_link_libraries(aderand1_example asyncdeShared profiler)
elseif()
  target_link_libraries(aderand1_example asyncdeShared)
endif()
